adjusted css to be responsive all to way to smallest browser size. Still need to fix mobile layout issues.

--- a/styling/styles.scss
+++ b/styling/styles.scss
@@ -24,6 +24,7 @@ body {
     font-size: $p;
     color: #fff;
     background-color: #333;
+    overflow-x: hidden;
 }
 
 nav {
@@ -159,8 +160,15 @@ nav {
         max-width: 970px;
         min-height: 350px;
         .tabs {
+            position: relative;
             a {
                 cursor: pointer;
+                span {
+                    position: relative;
+                }
+                .shortTxt {
+                    display: none;
+                }
             }
         }
         .exp-content {
@@ -337,67 +345,7 @@ nav {
   z-index: 0;
 }
 
-@media screen and (max-width: 1100px) {
-    .section.start {
-        margin: 100px auto 340px;
-        min-height: 330px;
-    }
-    .section .phone {
-        bottom: -170px;
-        margin-right: 30px;
-    }
-    .section.experience {
-        min-height: 320px;
-    }
-    nav {
-        margin: 40px 20px 40px auto;
-    }
-    body {
-        margin: 0 30px;
-    }
-    .section.experience .tabs ul li {
-        width: 270px;
-        margin: 0 5px;
-    }
-    .section.experience .tabs ul li a {
-        padding: 10px 10px 16px;
-    }
-    .section.experience .tabs ul li:first-child {
-        width: 250px;
-    }
-    .section.experience .tabs ul li:last-child {
-        width: 260px;
-    }
-}
 
-@media screen and (max-width: 991px) {
-    .section.experience .tabs ul li {
-        display: block;
-        margin: 30px 5px;
-    }
-    .tabs {
-        width: 280px;
-        margin-right: 30px;
-        float: left;
-    }
-    .section.experience .tabs ul li:first-child, .section.experience .tabs ul li:last-child {
-        width: 270px;
-    }
-    .section.experience .exp-content {
-        margin-top: 30px;
-        margin-left: 300px;
-        width: unset;
-    }
-    .section.work .flex-container a {
-        width: 30%;
-    }
-}
 
-@media screen and (max-width: 880px) {
-    .section.start {
-        margin: 50px auto 370px;
-    }
-    .section .phone {
-        bottom: -290px;
-    }
-}
+
+@import 'media_queries';
